--- a/b2bdatalog/b2bdatalog.tex
+++ b/b2bdatalog/b2bdatalog.tex
@@ -812,42 +812,51 @@ benchmark measurement was taken 50 times and averaged out.
 
 \begin{exmp}{RhoDFS inference rules}
 	\tiny
-	\begin{align}
-		T(?x, ?y, ?z) \leftarrow \text{rdf}(?x, ?y, ?z)                                                       \\
-		T(?y, rdf:type, ?x) \leftarrow T(?a, rdfs:domain, ?x), T(?y, ?a, ?z)                                  \\
-		T(?z, rdf:type, ?x) \leftarrow T(?a, rdfs:range, ?x), T(?y, ?a, ?z)                                   \\
-		T(?x, rdfs:subPropertyOf, ?z) \leftarrow T(?x, rdfs:subPropertyOf, ?y), T(?y, rdfs:subPropertyOf, ?z) \\
-		T(?x, rdfs:subClassOf, ?z) \leftarrow T(?x, rdfs:subClassOf, ?y), T(?y, rdfs:subClassOf, ?z)          \\
-		T(?z, rdf:type, ?y) \leftarrow T(?x, rdfs:subClassOf, ?y), T(?z, rdf:type, ?x)                        \\
+	\begin{align*}
+		T(?x, ?y, ?z) \leftarrow \text{rdf}(?x, ?y, ?z)                                \\
+		T(?y, rdf:type, ?x) \leftarrow T(?a, rdfs:domain, ?x), T(?y, ?a, ?z)           \\
+		T(?z, rdf:type, ?x) \leftarrow T(?a, rdfs:range, ?x), T(?y, ?a, ?z)            \\
+		T(?x, rdfs:subPropertyOf, ?z) \leftarrow T(?x, rdfs:subPropertyOf, ?y),        \\
+		T(?y, rdfs:subPropertyOf, ?z)                                                  \\
+		T(?x, rdfs:subClassOf, ?z) \leftarrow T(?x, rdfs:subClassOf, ?y),              \\
+		T(?y, rdfs:subClassOf, ?z)                                                     \\
+		T(?z, rdf:type, ?y) \leftarrow T(?x, rdfs:subClassOf, ?y), T(?z, rdf:type, ?x) \\
 		T(?x, ?b, ?y) \leftarrow T(?a, rdfs:subPropertyOf, ?b), T(?x, ?a, ?y)
-	\end{align}
+	\end{align*}
 	\label{program:rhodfs}
 \end{exmp}
 
 \begin{exmp}{RhoDFS-s inference rules}
 	\tiny
-	\begin{align}
-		rdfs:domain(?a, ?x) \leftarrow rdf(?a, rdfs:domain, ?x)                                      \\
-		rdfs:range(?a, ?x) \leftarrow rdf(?a, rdfs:range, ?x)                                        \\
-		rdf:type(?y, ?x) \leftarrow rdf(?y, rdf:type, ?x)                                            \\
-		rdfs:subPropertyOf(?x, ?z) \leftarrow rdf(?x, rdfs:subPropertyOf, ?z)                        \\
-		rdfs:subClassOf(?x, ?z) \leftarrow rdf(?x, rdfs:subClassOf, ?z)                              \\
-		rdf:type(?y, ?x) \leftarrow rdfs:domain(?a, ?x), rdf(?y, ?a, ?z)                             \\
-		rdf:type(?z, ?x) \leftarrow rdfs:range(?a, ?x), rdf(?y, ?a, ?z)                              \\
-		rdfs:subPropertyOf(?x, ?z) \leftarrow rdfs:subPropertyOf(?x, ?y), rdfs:subPropertyOf(?y, ?z) \\
-		rdfs:subClassOf(?x, ?z) \leftarrow rdfs:subClassOf(?x, ?y), rdfs:subClassOf(?y, ?z)          \\
-		rdf:type(?z, ?y) \leftarrow rdfs:subClassOf(?x, ?y), rdf:type(?z, ?x)                        \\
+	\begin{align*}
+		rdfs:domain(?a, ?x) \leftarrow rdf(?a, rdfs:domain, ?x)               \\
+		rdfs:range(?a, ?x) \leftarrow rdf(?a, rdfs:range, ?x)                 \\
+		rdf:type(?y, ?x) \leftarrow rdf(?y, rdf:type, ?x)                     \\
+		rdfs:subPropertyOf(?x, ?z) \leftarrow rdf(?x, rdfs:subPropertyOf, ?z) \\
+		rdfs:subClassOf(?x, ?z) \leftarrow rdf(?x, rdfs:subClassOf, ?z)       \\
+		rdf:type(?y, ?x) \leftarrow rdfs:domain(?a, ?x), rdf(?y, ?a, ?z)      \\
+		rdf:type(?z, ?x) \leftarrow rdfs:range(?a, ?x), rdf(?y, ?a, ?z)       \\
+		rdfs:subPropertyOf(?x, ?z) \leftarrow rdfs:subPropertyOf(?x, ?y),     \\
+		rdfs:subPropertyOf(?y, ?z)                                            \\
+		rdfs:subClassOf(?x, ?z) \leftarrow rdfs:subClassOf(?x, ?y),           \\
+		rdfs:subClassOf(?y, ?z)                                               \\
+		rdf:type(?z, ?y) \leftarrow rdfs:subClassOf(?x, ?y), rdf:type(?z, ?x) \\
 		rdf(?x, ?b, ?y) \leftarrow rdfs:subPropertyOf(?a, ?b), T(?x, ?a, ?y)
-	\end{align}
+	\end{align*}
 	\label{program:rhodfss}
 \end{exmp}
 
 \begin{table}[]
-	\begin{tabular}{|l|l|l|}
+	\begin{tabular}{|c|c|c|}
+		\hline
 		Dataset & Area of Interest & Programs                 \\
+		\hline
 		LUBM    & semantic web     & RhoDFS, RhoDFS-s, OWL2RL \\
+		\hline
 		RMAT1K  & synthetic        & tc                       \\
+		\hline
 		RAND1K  & synthetic        & tc                       \\
+		\hline
 	\end{tabular}
 	\label{table:datasets}
 \end{table}
@@ -876,93 +885,73 @@ including LUBM\cite{lubm}, are synthetic, with the difference being that there a
 	      a hundred times more edges than the initial graph.
 \end{itemize}
 
+\subsection{Update Comparison Over Multiple Reasoners, Datasets and Programs}
 \begin{table*}[!ht]
 	\caption{Multi-column and multi-row table}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
-			Dataset & Program                 & Batch & \multicolumn{3}{c|}{diff} & \multicolumn{3}{c|}{diff^{I}} & \multicolumn{3}{c|}{chibi} & \multicolumn{3}{c|}{chibi^{I}} & \multicolumn{3}{c|}{rel}                                                                       \\
 			\hline
-			        &                         &       & Mat                       & +                             & -                          & Mat                            & +                        & -    & Mat  & +    & -    & Mat  & +    & -    & Mat  & +    & -    \\
+			Dataset & Program                  & Batch  & \multicolumn{3}{c|}{diff} & \multicolumn{3}{c|}{$\text{diff}^{I}$} & \multicolumn{3}{c|}{chibi} & \multicolumn{3}{c|}{$\text{chibi}^{I}$} & \multicolumn{3}{c|}{rel}                                                                       \\
 			\hline
-			LUBM1   & \multirow{6}{*}{rdfs}   & 0.50  & 1.47                      & 1.43                          & 1.40                       & 0.47                           & 0.48                     & 0.49 & 124  & 530  & 584  & 0.84 & 1.13 & 1.62 & 0.71 & 1.02 & 1.58 \\
-			        &                         & 0.75  & 2.15                      & 0.74                          & 0.73                       & 0.67                           & 0.29                     & 0.25 & 276  & 559  & 369  & 1.10 & 1.01 & 1.38 & 1.01 & 0.97 & 1.42 \\
-			        &                         & 0.90  & 2.58                      & 0.33                          & 0.34                       & 0.84                           & 0.14                     & 0.13 & 397  & 573  & 168  & 1.40 & 1.02 & 1.22 & 1.26 & 1.03 & 1.42 \\
-			        &                         & 0.99  & 2.91                      & 0.05                          & 0.05                       & 0.95                           & 0.05                     & 0.03 & 486  & 584  & 23   & 1.54 & 1.00 & 0.97 & 1.41 & 0.97 & 1.23 \\
-			        &                         & 0.999 & 2.94                      & 0.03                          & 0.01                       & 0.97                           & 0.03                     & 0.02 & 487  & 586  & 5.5  & 1.60 & 1.00 & 1.23 & 1.38 & 0.94 & 1.45 \\
-			        &                         & 1.00  & 2.89                      & 0                             & 0                          & 0.99                           & 0                        & 0    & 487  & 0    & 0    & 1.34 & 0    & 0    & 1.20 & 0    & 0    \\
+			        &                          &        & Mat                       & +                                      & -                          & Mat                                     & +                        & -    & Mat  & +    & -    & Mat  & +    & -    & Mat  & +    & -    \\
+			\hline
+			LUBM1   & \multirow{6}{*}{rdfs}    & 50\%   & 1.47                      & 1.43                                   & 1.40                       & 0.47                                    & 0.48                     & 0.49 & 124  & 530  & 584  & 0.84 & 1.13 & 1.62 & 0.71 & 1.02 & 1.58 \\
+			        &                          & 75\%   & 2.15                      & 0.74                                   & 0.73                       & 0.67                                    & 0.29                     & 0.25 & 276  & 559  & 369  & 1.10 & 1.01 & 1.38 & 1.01 & 0.97 & 1.42 \\
+			        &                          & 90\%   & 2.58                      & 0.33                                   & 0.34                       & 0.84                                    & 0.14                     & 0.13 & 397  & 573  & 168  & 1.40 & 1.02 & 1.22 & 1.26 & 1.03 & 1.42 \\
+			        &                          & 99\%   & 2.91                      & 0.05                                   & 0.05                       & 0.95                                    & 0.05                     & 0.03 & 486  & 584  & 23   & 1.54 & 1.00 & 0.97 & 1.41 & 0.97 & 1.23 \\
+			        &                          & 99.9\% & 2.94                      & 0.03                                   & 0.01                       & 0.97                                    & 0.03                     & 0.02 & 487  & 586  & 5.5  & 1.60 & 1.00 & 1.23 & 1.38 & 0.94 & 1.45 \\
+			        &                          & 100\%  & 2.89                      & 0                                      & 0                          & 0.99                                    & 0                        & 0    & 487  & 0    & 0    & 1.34 & 0    & 0    & 1.20 & 0    & 0    \\
 			\cline{2-18}
-			        & \multirow{6}{*}{rdfs-s} & 0.50  & 0.84                      & 1.11                          & 0.92                       & 0.27                           & 0.29                     & 0.35 & 0.72 & 1.2  & 126  & 0.65 & 1.11 & 1.67 & 0.63 & 1.25 & 1.72 \\
-			        &                         & 0.75  & 1.31                      & 0.46                          & 0.49                       & 0.35                           & 0.17                     & 0.16 & 1.11 & 1.04 & 103  & 1.11 & 1.21 & 1.3  & 0.94 & 1.03 & 1.41 \\
-			        &                         & 0.90  & 1.67                      & 0.24                          & 0.23                       & 0.40                           & 0.09                     & 0.09 & 1.3  & 1.10 & 54   & 1.12 & 1.08 & 1.2  & 1.26 & 1.16 & 1.32 \\
-			        &                         & 0.99  & 1.72                      & 0.05                          & 0.05                       & 0.44                           & 0.05                     & 0.02 & 1.5  & 1.1  & 9.5  & 1.48 & 1.09 & 1.1  & 1.28 & 1.20 & 1.58 \\
-			        &                         & 0.999 & 1.65                      & 0.03                          & 0.02                       & 0.45                           & 0.03                     & 0.02 & 1.5  & 1.0  & 2.9  & 1.39 & 1.10 & 1.0  & 1.46 & 1.32 & 1.52 \\
-			        &                         & 1.00  & 1.77                      & 0                             & 0                          & 0.45                           & 0                        & 0    & 1.2  & 0    & 0    & 1.38 & 0    & 0    & 1.12 & 0    & 0    \\
+			        & \multirow{6}{*}{rdfs\-s} & 50\%   & 0.84                      & 1.11                                   & 0.92                       & 0.27                                    & 0.29                     & 0.35 & 0.72 & 1.2  & 126  & 0.65 & 1.11 & 1.67 & 0.63 & 1.25 & 1.72 \\
+			        &                          & 75\%   & 1.31                      & 0.46                                   & 0.49                       & 0.35                                    & 0.17                     & 0.16 & 1.11 & 1.04 & 103  & 1.11 & 1.21 & 1.3  & 0.94 & 1.03 & 1.41 \\
+			        &                          & 90\%   & 1.67                      & 0.24                                   & 0.23                       & 0.40                                    & 0.09                     & 0.09 & 1.3  & 1.10 & 54   & 1.12 & 1.08 & 1.2  & 1.26 & 1.16 & 1.32 \\
+			        &                          & 99\%   & 1.72                      & 0.05                                   & 0.05                       & 0.44                                    & 0.05                     & 0.02 & 1.5  & 1.1  & 9.5  & 1.48 & 1.09 & 1.1  & 1.28 & 1.20 & 1.58 \\
+			        &                          & 99.9\% & 1.65                      & 0.03                                   & 0.02                       & 0.45                                    & 0.03                     & 0.02 & 1.5  & 1.0  & 2.9  & 1.39 & 1.10 & 1.0  & 1.46 & 1.32 & 1.52 \\
+			        &                          & 100\%  & 1.77                      & 0                                      & 0                          & 0.45                                    & 0                        & 0    & 1.2  & 0    & 0    & 1.38 & 0    & 0    & 1.12 & 0    & 0    \\
 			\cline{2-18}
-			        & \multirow{6}{*}{owl2rl} & 0.50  & 3.16                      & 8.48                          & 9.19                       & OOM                            & OOM                      & OOM  & OOT  & OOT  & OOT  & 31.1 & 85.7 & 55.9 & 32.0 & 88.1 & 16.3 \\
-			        &                         & 0.75  & 6.59                      & 4.91                          & 5.00                       & OOM                            & OOM                      & OOM  & OOT  & OOT  & OOT  & 66.8 & 71.7 & 36.4 & 85.1 & 81.3 & 16.1 \\
-			        &                         & 0.90  & 9.50                      & 2.42                          & 2.29                       & OOM                            & OOM                      & OOM  & OOT  & OOT  & OOT  & 114  & 63.5 & 15.1 & 130  & 70   & 16.3 \\
-			        &                         & 0.99  & 11.2                      & 0.04                          & 0.03                       & OOM                            & OOM                      & OOM  & OOT  & OOT  & OOT  & 114  & 60.2 & 2.52 & 156  & 34   & 0.60 \\
-			        &                         & 0.999 & 11.3                      & 0.03                          & 0.02                       & OOM                            & OOM                      & OOM  & OOT  & OOT  & OOT  & 117  & 73.3 & 1.3  & 161  & 34   & 0.61 \\
-			        &                         & 1.00  & 11.2                      & 0                             & 0                          & OOM                            & 0                        & 0    & OOT  & 0    & 0    & 138  & 0    & 0    & 162  & 0    & 0    \\
+			        & \multirow{6}{*}{owl2rl}  & 50\%   & 3.16                      & 8.48                                   & 9.19                       & OOM                                     & OOM                      & OOM  & OOT  & OOT  & OOT  & 31.1 & 85.7 & 55.9 & 32.0 & 88.1 & 16.3 \\
+			        &                          & 75\%   & 6.59                      & 4.91                                   & 5.00                       & OOM                                     & OOM                      & OOM  & OOT  & OOT  & OOT  & 66.8 & 71.7 & 36.4 & 85.1 & 81.3 & 16.1 \\
+			        &                          & 90\%   & 9.50                      & 2.42                                   & 2.29                       & OOM                                     & OOM                      & OOM  & OOT  & OOT  & OOT  & 114  & 63.5 & 15.1 & 130  & 70   & 16.3 \\
+			        &                          & 99\%   & 11.2                      & 0.04                                   & 0.03                       & OOM                                     & OOM                      & OOM  & OOT  & OOT  & OOT  & 114  & 60.2 & 2.52 & 156  & 34   & 0.60 \\
+			        &                          & 99.9\% & 11.3                      & 0.03                                   & 0.02                       & OOM                                     & OOM                      & OOM  & OOT  & OOT  & OOT  & 117  & 73.3 & 1.3  & 161  & 34   & 0.61 \\
+			        &                          & 100\%  & 11.2                      & 0                                      & 0                          & OOM                                     & 0                        & 0    & OOT  & 0    & 0    & 138  & 0    & 0    & 162  & 0    & 0    \\
 			\hline
-			RAND-1k & \multirow{6}{*}{tc}     & 0.50  & 0.06                      & 1.07                          & 1.02                       & 0.03                           & 0.08                     & 0.10 & 0.03 & 0.48 & 1.08 & 0.01 & 0.13 & 0.17 & 0.01 & 0.13 & 0.13 \\
-			        &                         & 0.75  & 0.23                      & 0.94                          & 0.91                       & 0.05                           & 0.07                     & 0.07 & 0.14 & 0.42 & 2.25 & 0.02 & 0.12 & 0.23 & 0.02 & 0.13 & 0.16 \\
-			        &                         & 0.90  & 0.64                      & 0.56                          & 0.56                       & 0.07                           & 0.06                     & 0.05 & 0.45 & 0.48 & 5.96 & 0.08 & 0.15 & 0.70 & 0.07 & 0.15 & 0.26 \\
-			        &                         & 0.99  & 1.05                      & 0.17                          & 0.17                       & 0.08                           & 0.03                     & 0.03 & 0.77 & 0.52 & 0.72 & 0.12 & 0.16 & 0.15 & 0.11 & 0.16 & 0.16 \\
-			        &                         & 0.999 & 1.13                      & 0.03                          & 0.03                       & 0.09                           & 0.01                     & 0.01 & 0.85 & 0.43 & 0.11 & 0.16 & 0.07 & 0.06 & 0.14 & 0.05 & 0.05 \\
-			        &                         & 1.00  & 1.15                      & 0.05                          & 0.05                       & 0.10                           & 0                        & 0    & 0.86 & 0    & 0    & 0.16 & 0    & 0    & 0.14 & 0    & 0    \\
+			RAND-1k & \multirow{6}{*}{tc}      & 50\%   & 0.06                      & 1.07                                   & 1.02                       & 0.03                                    & 0.08                     & 0.10 & 0.03 & 0.48 & 1.08 & 0.01 & 0.13 & 0.17 & 0.01 & 0.13 & 0.13 \\
+			        &                          & 75\%   & 0.23                      & 0.94                                   & 0.91                       & 0.05                                    & 0.07                     & 0.07 & 0.14 & 0.42 & 2.25 & 0.02 & 0.12 & 0.23 & 0.02 & 0.13 & 0.16 \\
+			        &                          & 90\%   & 0.64                      & 0.56                                   & 0.56                       & 0.07                                    & 0.06                     & 0.05 & 0.45 & 0.48 & 5.96 & 0.08 & 0.15 & 0.70 & 0.07 & 0.15 & 0.26 \\
+			        &                          & 99\%   & 1.05                      & 0.17                                   & 0.17                       & 0.08                                    & 0.03                     & 0.03 & 0.77 & 0.52 & 0.72 & 0.12 & 0.16 & 0.15 & 0.11 & 0.16 & 0.16 \\
+			        &                          & 99.9\% & 1.13                      & 0.03                                   & 0.03                       & 0.09                                    & 0.01                     & 0.01 & 0.85 & 0.43 & 0.11 & 0.16 & 0.07 & 0.06 & 0.14 & 0.05 & 0.05 \\
+			        &                          & 100\%  & 1.15                      & 0.05                                   & 0.05                       & 0.10                                    & 0                        & 0    & 0.86 & 0    & 0    & 0.16 & 0    & 0    & 0.14 & 0    & 0    \\
 			\hline
-			RMAT-1k & \multirow{6}{*}{tc}     & 0.50  & 1.30                      & 13.0                          & 11.2                       & 0.63                           & 2.51                     & 3.83 & 0.99 & 5.01 & 7.70 & 0.12 & 1.40 & 2.03 & 0.20 & 1.36 & 1.72 \\
-			        &                         & 0.75  & 5.29                      & 9.22                          & 8.59                       & 1.51                           & 2.13                     & 2.57 & 3.71 & 4.52 & 8.84 & 0.57 & 1.67 & 2.06 & 0.61 & 1.54 & 1.84 \\
-			        &                         & 0.90  & 8.88                      & 4.09                          & 3.91                       & 2.11                           & 1.08                     & 0.95 & 6.17 & 5.25 & 9.48 & 0.89 & 1.72 & 2.11 & 0.89 & 1.67 & 2.01 \\
-			        &                         & 0.99  & 12.0                      & 0.76                          & 0.59                       & 2.40                           & 0.06                     & 0.06 & 8.32 & 5.51 & 10.2 & 1.12 & 1.68 & 2.68 & 1.20 & 1.55 & 2.28 \\
-			        &                         & 0.999 & 12.7                      & 0.04                          & 0.04                       & 2.36                           & 0.01                     & 0.01 & 8.79 & 4.63 & 0.55 & 1.25 & 0.90 & 0.69 & 1.31 & 0.58 & 0.78 \\
-			        &                         & 1.00  & 12.8                      & 0                             & 0                          & 2.31                           & 0                        & 0    & 8.78 & 0    & 0    & 1.26 & 0    & 0    & 1.30 & 0    & 0    \\
+			RMAT-1k & \multirow{6}{*}{tc}      & 50\%   & 1.30                      & 13.0                                   & 11.2                       & 0.63                                    & 2.51                     & 3.83 & 0.99 & 5.01 & 7.70 & 0.12 & 1.40 & 2.03 & 0.20 & 1.36 & 1.72 \\
+			        &                          & 75\%   & 5.29                      & 9.22                                   & 8.59                       & 1.51                                    & 2.13                     & 2.57 & 3.71 & 4.52 & 8.84 & 0.57 & 1.67 & 2.06 & 0.61 & 1.54 & 1.84 \\
+			        &                          & 90\%   & 8.88                      & 4.09                                   & 3.91                       & 2.11                                    & 1.08                     & 0.95 & 6.17 & 5.25 & 9.48 & 0.89 & 1.72 & 2.11 & 0.89 & 1.67 & 2.01 \\
+			        &                          & 99\%   & 12.0                      & 0.76                                   & 0.59                       & 2.40                                    & 0.06                     & 0.06 & 8.32 & 5.51 & 10.2 & 1.12 & 1.68 & 2.68 & 1.20 & 1.55 & 2.28 \\
+			        &                          & 99.9\% & 12.7                      & 0.04                                   & 0.04                       & 2.36                                    & 0.01                     & 0.01 & 8.79 & 4.63 & 0.55 & 1.25 & 0.90 & 0.69 & 1.31 & 0.58 & 0.78 \\
+			        &                          & 100\%  & 12.8                      & 0                                      & 0                          & 2.31                                    & 0                        & 0    & 8.78 & 0    & 0    & 1.26 & 0    & 0    & 1.30 & 0    & 0    \\
 			\hline
 		\end{tabular}
 	\end{center}
 	\label{tab:mainbenchmark}
 \end{table*}
 
-On table \ref{tab:mainbenchmark}, the most relevant benchmark can be found.
+Table \ref{tab:mainbenchmark} pictures the main benchmark, in which three measurements, Mat, +, and -, for every batch size, are recorded. All measurements are in \textbf{seconds}. If the batch size is 75\%, then Mat is the amount of time taken to materialize 75\% of the data, using regular semi-naive evaluation, + is how much incremental materialization, of 25\% of the data, the remaining amount, also using semi-naive evaluation, took, and lastly, - is how much time DRED has taken to delete the 25\% that has been added. This provides a comprehensive and thorough overview of the performance of DRED and semi-naive evaluation, compared to differential dataflow, which offers an alternative to both.
 
-As we have already suggested,
-the choice of the facts in E can significantly affect the per-
-formance of the two algorithms. Thus, to estimate typical
-performance, we would have to run the algorithms on many
-random subsets of E, which is infeasible since each run can
-take a long time. However, we expect the ‘equilibrium’ point
-E to be sufficiently large to contain a mixture of ‘easy’ eq
-and ‘hard’ facts, so the performance of the two algorithms
-should not be greatly influenced by the actual choices. Con-
-sequently, we randomly selected just one ‘equilibrium’ point
-E. Furthermore, for practical reasons, we randomly se- eq
-lected subsets of E containing 100 facts, 5000 facts, and e
-25%, 50%, and 75% of E− . 
+Notably, the selection of facts in + and - can dramatically influence the performance of both DRED and differential dataflow. However, conducting extensive performance estimations by running the algorithms on numerous random subsets of the data is impractical due to the extensive duration required to run the entire benchmark, coupled with the factorial number of possible permutations. Thus, we chose to just select random subsets of the data that contained 50\%, 25\%, 10\%, 1\%, and 0.1\% of its original size, as update sizes, expecting it to not contain the worst-possible scenario of.
 
+For the LUBM1 dataset under the rdfs program, all reasoners exhibit a clear trend of decreasing updates as the batch size increases. In the case of the 'diff' reasoner, with a 100\% batch size, updates essentially reach zero, which was expected. The trend is similar for the incremental version of diff, $\text{diff}^{I}$, with batch size progression from 50\% to 100\%. A similar behavior is observed for the chibi, $\text{chibi}^{I}$, and rel reasoners.
 
+The absolute values of updates decrease more drastically for the non-incremental reasoners (diff and chibi) compared to their incremental counterparts, especially as batch size increases beyond 75\%. This indicates that non-incremental reasoners might be more efficient at utilizing the larger batch sizes to decrease the total number of updates required, as expected.
 
-redo all, make graphs paper worthy
+Under the rdfs-s program, again, updates decrease with increasing batch size. This is consistent across all reasoners. However, the decrease in updates is less pronounced compared to the rdfs program, especially for diff and $\text{diff}^{I}$. This might indicate that the rdfs-s program is more complex and hence benefits less from larger batch sizes compared to the rdfs program.
 
-The semantic web has very unique use-cases for datalog, and are the leading source of research in extending datalog. Seeking ways to introduce tuple-generating dependencies to
-programs, with evaluation remaining tractable, has been one of the most active research directions, with highly-influential papers establishing new families of datalog
-languages\cite{datalog_plus_minus} and thoroughly exploring their complexity classes alongside further expansions\cite{sticky,warded,monadic}.
+For the owl2rl program, there are striking differences. While the trend of decreasing updates with increasing batch size still holds, for the diff and $\text{diff}^{I}$ reasoners, the program runs out of memory (OOM) even at 50\% batch size. This implies that the owl2rl program requires significantly more resources compared to rdfs and rdfs-s. The chibi reasoner runs out of time (OOT) even at 50\% batch size. The rel reasoner, however, manages to process the dataset and exhibit the expected pattern.
 
-These advancements have been somewhat tested in practice, albeit with no full reference implementation having been specified. The most comprehensive, and recent, is closed-source\cite{vadalog}.
-The leading datalog engine in general, is also closed-source\cite{rdfox}, and is tailored specifically to the semantic web.
+For the tc program with RAND-1k and RMAT-1k datasets, the number of updates decreases with increasing batch sizes across all reasoners, similar to the patterns seen in the rdfs and rdfs-s programs. For the diff and $\text{diff}^{I}$ reasoners, the decline is much more steep compared to the chibi, $\text{chibi}^{I}$, and rel reasoners. The pattern suggests that the tc program and the datasets utilized benefit greatly from larger batch sizes.
 
-The first program, \ref{program:cspa}\cite{graspan}, expresses pointer analysis, whose goal is to establish which assignments yield value aliases and memory aliases as a reachability problem. Program \ref{program:csda} directly models checking a program's control-flow graph for null edges as a simple transitive-closure computation. The last program, \ref{program:rhodfs}, is used to materialize the non-trivial inference rules from RDFS\cite{rdfs}, a popular data modelling logic for adding semantics to RDF\cite{rdf} data.
+In conclusion, across multiple reasoners, datasets, and programs, the number of updates generally decrease with increasing batch size. This indicates the effectiveness of batch reasoning in reducing update operations. However, the rate of decrease and the ability to handle larger batch sizes vary greatly depending on the reasoner and the complexity of the program. This highlights the need for careful choice of reasoners and batch sizes based on the specific requirements and limitations of the dataset and program.
 
-\subsection{COST}
-
-\begin{figure}[htb!]
-	\centering
-	\includegraphics[width=.45\textwidth,height=\textheight,keepaspectratio]{COST}
-	\caption{The COST of differential reasoner}
-	\label{benchmark:cost}
-\end{figure}
-
-Benchmark \cite{benchmark:cost} seeks to answer an important question that is often overlooked, what is the configuration that outperforms a single thread(COST)? this can be convincingly answered in shapiro. As it can be seen, on the LUBM dataset, a synthetic infinitely-scalable ontology, in order to fully materialize all data at once, differential reasoner performs on par with the substitution-based reasoner, showcasing the very little overhead that differential dataflow has, given that it implements the same algorithm as the substitution-based reasoner.
+\subsection{Memory Usage.}
 
 \subsection{Scalability.}
 
@@ -975,18 +964,6 @@ Benchmark \cite{benchmark:cost} seeks to answer an important question that is of
 \end{figure}
 
 Scalability is measured over the LUBM dataset over increasingly larger relative updates. There are two kinds of updates: additions and deletions, both as a percentage of the total data. It is evident from benchmark \cite{benchmark:scalability} that all reasoners scale linearly with respect to the increasing amount of data, however, there is a significant difference with respect to updates. Both non-differential reasoners seem to get polynomially slower with bigger deletion update sizes than differential dataflow.
-
-\subsection{Multiple Datasets.}
-
-\begin{figure}[ht]
-	\centering
-	\subfloat[]{\includegraphics[width=.5\textwidth,height=\textheight,keepaspectratio]{CSDA}\label{benchmark:CSDA}}%
-	\subfloat[]{\includegraphics[width=.5\textwidth,height=\textheight,keepaspectratio]{CSPA}\label{benchmark:CSPA}}\\
-	\caption{Multiple programs with different datasets}
-	\label{benchmark:scalability}
-\end{figure}
-
-The last benchmark, pertaining to program analysis, is used to explore the possibly performance differences for completely different datasets, with the same programs. Benchmark \cite{benchmark:csda} is the most surprising, since differential dataflow significantly outperforms the other implementations, while this isn't the case in any other benchmark. The rationale behind that, is that in both non-differential reasoners, iteration implies cloning a non-trivial amount of data, therefore generating a large amount of allocations, while the differential version also makes a large number of allocations, it parallelizes iterations, due to its partially-ordered timestamp, being able to concurrently progress multiple independent transitive chains at once.
 
 \section{Conclusion}
 
